--- a/challenge-1/package.json
+++ b/challenge-1/package.json
@@ -15,7 +15,8 @@
   "license": "MIT",
   "dependencies": {
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
