added graph animation and removed styled-components

--- a/challenge-1/.babelrc
+++ b/challenge-1/.babelrc
@@ -17,6 +17,7 @@
     ],
     "plugins": [
         "syntax-dynamic-import",
-        "transform-class-properties"
+        "transform-class-properties",
+        "styled-jsx/babel"
     ]
 }
