--- a/challenge-1/package.json
+++ b/challenge-1/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "styled-components": "^4.1.3"
+    "styled-jsx": "^3.1.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
