--- a/challenge-1/package.json
+++ b/challenge-1/package.json
@@ -14,6 +14,7 @@
   "author": "pizza3",
   "license": "MIT",
   "dependencies": {
+    "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "styled-jsx": "^3.1.2"
